# TrajAn

./: .gitignore  CMakeLists.txt  pyproject.toml  tt
.cache/clangd/index/: atom.cpp.A41BBC5E0700EB7B.idx  atom.cpp.F190216322341B9F.idx  atom.h.D61B3CAA303871F2.idx  atom.h.FCFC3F49EE7ADDDF.idx  dcd.cpp.658162CF58B6A14D.idx  dcd.cpp.C265BB50691B6CA7.idx  dcd.h.360DAA4514A200A8.idx  element.cpp.844F33BA895D89F0.idx  element.h.D902B368A80DDD80.idx  file.cpp.C9C3293D62871441.idx  file.h.24537150BB7E3DC9.idx  file.h.96124330593C91AA.idx  frame.cpp.E8A652B897B94033.idx  frame.h.074AEE772708C506.idx  frame.h.9EE94BDC972D2A08.idx  input.cpp.1334759E3E858FA4.idx  input.cpp.62A85B4D41D4D99C.idx  input.h.42E3A031F3BFA01B.idx  input.h.6FFFC43CEA4DF4E5.idx  linear_algebra.h.7C31E17A71BE7DE5.idx  linear_algebra.h.8679140C0676EF9D.idx  log.cpp.6ABC5CC35F880556.idx  log.cpp.7CE7A89515EBF33B.idx  log.h.32E8496A7C36D851.idx  log.h.5AD109C909D810E9.idx  main.cpp.1A1D6EE770237B0B.idx  main.cpp.35914E16396EAA25.idx  molecule.cpp.9E84EFB54DE55DBB.idx  molecule.h.23FE2A046B1357E2.idx  molecule.h.FC70F30B45F825A6.idx  neigh.cpp.6272DF49031B6ADB.idx  neigh.h.2D61FC660CEBD7F1.idx  pdb.cpp.3259AB436A03048F.idx  pdb.cpp.8B129359F14AE5E9.idx  pdb.h.E6D0297AC396EDD8.idx  radial_distribution_func.cpp.8E7E55DFD4811B63.idx  rdf.cpp.D1103125521339AE.idx  selection.cpp.762C9000E086A85D.idx  selection.h.E0A2B541E899F2AC.idx  tacpp.cpp.7ECA39C9733A60D0.idx  (+21 more)
cmake/: CPM.cmake
examples/: coord.xyz  gofr.out  gofr2.out  gpta.out  init  init2  look  mda.py  nlp  rdf_ref  test_ref
include/: CMakeLists.txt
include/tacpp/core/: CMakeLists.txt  atom.h  linear_algebra.h  log.h  radial_distribution_func.h  util.h
include/tacpp/io/: CMakeLists.txt  pdb.h  read_pdb.h
include/tacpp/main/: CMakeLists.txt  tacpp_input.h  version.h
include/trajan/core/: CMakeLists.txt  _graph.h  atom.h  element.h  frame.h  graph.h  linear_algebra.h  log.h  molecule.h  neigh.h  neigh2.h  pipeline.h  radial_distribution_func.h  timings.h  topology.h  trajectory.h  unit_cell.h  units.h  util.h
include/trajan/io/: CMakeLists.txt  dcd.h  file.h  file_handler.h  pdb.h  selection.h  text.h  xtc.h
include/trajan/main/: CMakeLists.txt  input.h  trajan.h  trajan_dipole.h  trajan_info.h  trajan_load.h  trajan_modify.h  trajan_pmepot.h  trajan_qc.h  trajan_rdf.h  trajan_solvate.h  trajan_surface.h  trajan_topology.h  trajan_wrap.h  trajan_write.h
src/: CMakeLists.txt  trajanjs.cpp  trajanpy.cpp
src/core/: CMakeLists.txt  atom.cpp  element.cpp  frame.cpp  log.cpp  molecule.cpp  neigh.cpp  neigh2.cpp  radial_distribution_func.cpp  topology.cpp  trajectory.cpp  unit_cell.cpp
src/io/: CMakeLists.txt  dcd.cpp  file.cpp  file_handler.cpp  pdb.cpp  read_pdb.cpp  selection.cpp  xtc.cpp  xyz.cpp
src/js/: core_bindings.cpp  core_bindings.h
src/main/: CMakeLists.txt  input.cpp  main.cpp  tacpp.cpp  tacpp_input.cpp  trajan.cpp  trajan_dipole.cpp  trajan_info.cpp  trajan_load.cpp  trajan_modify.cpp  trajan_pmepot.cpp  trajan_qc.cpp  trajan_rdf.cpp  trajan_solvate.cpp  trajan_surface.cpp  trajan_topology.cpp  trajan_wrap.cpp  trajan_write.cpp  version.cpp
src/python/: core_bindings.cpp  trajectory_bindings.cpp  trajectory_bindings.h
src/python/tests/: test_trajectory.py
tests/: CMakeLists.txt  _test_core.cpp  test_cli.cpp  test_core.cpp  test_io.cpp  test_main.cpp
