[build-system]
requires = ["scikit-build-core >=0.4.3", "cmake>3.20", "ninja; platform_system!='Windows'"]
build-backend = "scikit_build_core.build"

[project]
name = "trajanpy"
version = "0.0.1"
description = "A trajectory analysis library"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Blake I. Armstrong", email = "blakearmstrong21@gmail.com" },
]
classifiers = [
    "License :: GPLv3",
]

[project.urls]
Homepage = "https://github.com/blake-armstrong/TrajAn"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

cmake.args = ["-DWITH_PYTHON_BINDINGS=ON", "-DCMAKE_EXPORT_COMPILE_COMMANDS=ON"]
cmake.targets = ["_trajanpy","trajan"]

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Optional: run pytest to ensure that the package was correctly built
# test-command = "pytest {project}/tests"
# test-requires = "pytest"
skip = ["cp38-*", "pp38-*"] # Skip CPython and PyPy 3.8
archs = ["auto64"]          # Only target 64 bit architectures

# Needed for full C++17 support on macOS
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"
